--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -249,37 +249,37 @@ jobs:
           $EXPERIMENT_NAME = "${{ needs.deploy-infrastructure.outputs.experimentName }}"
           az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
 
-  # run-azure-load-test:
-  #   # The type of runner that the job will run on
-  #   runs-on: ubuntu-latest
-  #   needs: deploy-infrastructure
+  run-azure-load-test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: deploy-infrastructure
 
-  #   # Steps represent a sequence of tasks that will be executed as part of the job
-  #   steps:
-  #     # Checkout last version code from Main branch
-  #     - name: Checkout last version code from Main branch
-  #       uses: actions/checkout@main
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checkout last version code from Main branch
+      - name: Checkout last version code from Main branch
+        uses: actions/checkout@main
 
-  #     # Log into Azure
-  #     - name: Log into Azure
-  #       uses: azure/login@v1
-  #       with:
-  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # Log into Azure
+      - name: Log into Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  #     # https://github.com/Azure/load-testing
-  #     - name: "Create Azure Load Test"
-  #       uses: azure/load-testing@v1
-  #       with:
-  #         resourceGroup: ${{ secrets.AZURE_RG }}
-  #         loadTestResource: "${{ env.AZURELOADTESTINGNAME }}"
-  #         loadTestConfigFile: ./Bicep/ALT/config.yaml
-  #         env: |
-  #           [
-  #               {
-  #               "name": "webapp",
-  #               "value": "${{ needs.deploy-infrastructure.outputs.clusterip }}"
-  #               }
-  #           ]
-  #     - name: Azure logout
-  #       run: |
-  #         az logout
+      # https://github.com/Azure/load-testing
+      - name: "Create Azure Load Test"
+        uses: azure/load-testing@v1
+        with:
+          resourceGroup: ${{ secrets.AZURE_RG }}
+          loadTestResource: "${{ env.AZURELOADTESTINGNAME }}"
+          loadTestConfigFile: ./Bicep/ALT/config.yaml
+          env: |
+            [
+                {
+                "name": "webapp",
+                "value": "${{ needs.deploy-infrastructure.outputs.clusterip }}"
+                }
+            ]
+      - name: Azure logout
+        run: |
+          az logout
